--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div class="container">
         <div class="row">
-            <h1 class="text-center title text-white mt-5 display-1">Casino</h1>
+            <h1 class="text-center title text-white mt-5 display-1">Mr. Casino</h1>
         </div>
     </div>
 </body>
