--- a/index.html
+++ b/index.html
@@ -9,8 +9,19 @@
 </head>
 <body>
     <div class="container">
-        <div class="row">
-            <h1 class="text-center title text-white mt-5 display-1">Mr. Casino</h1>
+        <nav class="navbar navbar-expand sticky-top">
+            <div class="container-fluid justify-content-center">
+                <h1 class="text-center title text-white mt-3 mb-3 display-1">Mr. Casino</h1>
+            </div>
+        </nav>
+    </div>
+    <div class="container-fixed">
+        <div class="row m-3">
+            <div class="col-md-3 bg-light p-4">
+                <div class="row">
+                    <h2 class="text-center">Chips: </h2>
+                </div>
+            </div>
         </div>
     </div>
 </body>
