--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="script.js"></script>
 </head>
 <body>
     <div class="container">
@@ -17,9 +18,9 @@
     </div>
     <div class="container-fixed">
         <div class="row m-3">
-            <div class="col-md-3 bg-light p-4">
+            <div class="col-md-3 bg-light p-3">
                 <div class="row">
-                    <h2 class="text-center">Chips: </h2>
+                    <h2 class="text-center col-12">Chips: </h2>
                 </div>
             </div>
         </div>
