Finishing blackjack and implementing chips cookie system

--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="row m-3">
             <div class="col-md-3 bg-light p-3">
                 <div class="row">
-                    <h2 class="text-center col-12">Chips: </h2>
+                    <h2 class="text-center col-12" id="chip-value">Chips: </h2>
                 </div>
             </div>
         </div>
