--- a/21.html
+++ b/21.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css">
     <script defer src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"></script>
+    <script defer src="script.js"></script>
     <script defer src="21.js"></script>
 </head>
 <body>
@@ -18,8 +19,15 @@
     <div class="container-fluid px-4 overflow-hidden text-center">
         <div class="row m-3 gx-5">
             <div class="col-md-3">
-                <div class="p-3 bg-light">
-                    <h2 class="text-center">Chips: </h2>
+                <div class="row">
+                    <div class="p-3 bg-light">
+                        <h2 class="text-center" id="chip-value">Chips: </h2>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="bg-light p-3">
+                        <h2 class="text-center" id="player-points">User Points: 0</h2>
+                    </div>
                 </div>
             </div>
             <div class="col-md-9">
@@ -35,12 +43,16 @@
                 </div>
                 <div class="row border-top bg-black" style="height: 15vh" id="player-cards"></div>
                 <div class="m-3 row d-flex justify-content-evenly bg-transparent" id="game-buttons">
-                    <button class="btn btn-light p-2 col-3" onclick="try {dealToPlayer();} catch (e) {alert(e)}; try{dealToDealer()} catch (e) {alert(e);}">Hit</button>
-                    <button class="btn btn-light p-2 col-3">Stay</button>
-                    <button class="btn btn-light p-2 col-3">Bet</button>
+                    <button id="hit-button" class="btn btn-light p-2 col-3" onclick="dealToPlayer(false)" disabled>Hit</button>
+                    <button id="stay-button" class="btn btn-light p-2 col-3" onclick="evaluateRound()" disabled>Stay</button>
+                    <button id="bet-button" class="btn btn-light p-2 col-3" onclick="bet(parseInt(prompt('How much would you like to bet? (min 2)')))">Bet</button>
                 </div>
             </div>
         </div>
+    </div>
+    <div class="alert-window">
+        <button onclick="closeAlertWindow()">X</button>
+        <h3 id="alert-message"></h3>
     </div>
 </body>
 </html>
