--- a/21.html
+++ b/21.html
@@ -14,6 +14,7 @@
     <nav class="navbar navbar-expand sticky-top">
         <div class="container-fluid">
             <a class="navbar-brand text-white" href="index.html"><i class="bi bi-arrow-left display-5"></i></a>
+            <h1 class="text-center title text-white mt-3 mb-3 display-1" style="width: 100%">21/BlackJack</h1>
         </div>
     </nav>
     <div class="container-fluid px-4 overflow-hidden text-center">
@@ -54,5 +55,9 @@
         <button onclick="closeAlertWindow()">X</button>
         <h3 id="alert-message"></h3>
     </div>
+    <script>
+        let arrowWidth = document.querySelector(".navbar-brand").offsetWidth;
+        document.querySelector("title").style.transform = "translateX(-" + (arrowWidth / 2) + "px)";
+    </script>
 </body>
 </html>
